    &#8226; Added a tutorial after login<br/>
    &#8226; Added a 'Hangouts' layout option as a default theme<br/>
    &#8226; Open multiple links from the tweet activity<br/>
    &#8226; Option to enable favorite user notifications<br/>
    &#8226; Mentions notifications for second account<br/>
    &#8226; New notification icon<br/>
    &#8226; Save images from the photo viewer<br/>
    &#8226; Revamped the login to alleviate any problems<br/>
    &#8226; Any links that you open from a tweet will now open to my full screen browser first, then you can open them in the default browser from the Action bar<br/>
    &#8226; Applied the holo orange theme thoughout the rest of the ui<br/>
    &#8226; Added to the 'Get Help' and 'Other Apps' section of settings<br/>
    &#8226; Tweaks to style and performance across the board<br/><br/>
<br/>

<b>Version 0.80:</b> Cause Brandal has cool ideas too<br/><br/>
    &#8226; Added a real icon! Still need a notifications one<br/>
    &#8226; Added a pictures and links tab to the main page (optional)<br/>
    &#8226; Added a windowed photo view with a click on the pictures<br/>
    &#8226; Much better style on the main drawer<br/>
    &#8226; User pictures shown on notifications<br/>
    &#8226; Fixed force closes on the popup and sharing<br/><br/>
<br/>

<b>Version 0.70:</b> Who cares about finals anyways, it's app time! Finesse and final alpha. Fully functional, fully featured, fully awesome.<br/><br/>
    &#8226; Got the popup working for real this time<br/>
    &#8226; Rewrote all the notification stuff. Expandable, actionable, and dynamic<br/>
    &#8226; DashClock changes<br/>
    &#8226; Native YouTube player<br/>
    &#8226; YouTube thumbnails<br/>
    &#8226; LOTS of speed optimizations for main timeline<br/>
    &#8226; Option to not show the inline pictures<br/>
    &#8226; Much better support for hashtags, links, and user entities in tweets<br/>